fix: metadata id and paragraph spacing in blogs

--- a/styles.css
+++ b/styles.css
@@ -1060,7 +1060,7 @@ a:hover {
 /* Nested Lists */
 .blog-content-md li ul,
 .blog-content-md li ol {
-    margin-top: 0.35rem;
+    margin-top: 0.5rem;
     margin-bottom: 0.35rem;
 }
 
